# silver-octo-winner

./: dune-project
artifacts/stream_cleaner/: generate.sh  stream_cleaner.ir  stream_cleaner.opt.ir  stream_cleaner.v  stream_cleaner.x
artifacts/stream_cleaner_and_strip_fcs/: generate.sh  stream_cleaner_and_strip_fcs.ir  stream_cleaner_and_strip_fcs.opt.ir  stream_cleaner_and_strip_fcs.v  stream_cleaner_and_strip_fcs.x
artifacts/strip_fcs/: generate.sh  strip_fcs.ir  strip_fcs.opt.ir  strip_fcs.v  strip_fcs.x
designs/: dune  stream_cleaner.ml  stream_cleaner.sexp  stream_cleaner_inner.ml
lib/: dune  stream.ml  stream.mli
test/: dune  stream_simulator.ml  stream_simulator.mli  test_stream_cleaner.ml
